[tool.poetry]
name = "pmt"
version = "0.1.0"
description = ""
authors = ["Alexander Streed <alex.s@prefect.io>"]
readme = "README.md"

[tool.poetry.scripts]
pmt = "pmt.cli.app:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
prefect = "^2.14.11"
black = "^23.12.0"
astor = "^0.8.1"
rich = "^13.7.0"
greenlet = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.8"
pre-commit = "<3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
